fixed spacing between name and class title

--- a/styles/base.css
+++ b/styles/base.css
@@ -32,6 +32,10 @@ footer {
 
 }
 
+.my-name {
+    padding: 0;
+}
+
 nav {
     display: flex;
     margin: 0 auto;
